--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,6 +14,15 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.10.0
+        with:
+          mongodb-version: 5.0
+          mongodb-replica-set: test-rs
+          mongodb-username: root
+          mongodb-password: 123456
+          mongodb-db: test
+    
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v4
         with:
