--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -5,12 +5,11 @@ name: Go
 on: [push]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [ '1.18', '1.21.x' ]
+        go-version: ['1.18', '1.21.x']
 
     steps:
       - uses: actions/checkout@v4
@@ -19,7 +18,7 @@ jobs:
         with:
           mongodb-version: 5.0
           mongodb-replica-set: test-rs
-    
+
       - name: Setup Go ${{ matrix.go-version }}
         uses: actions/setup-go@v4
         with:
@@ -28,3 +27,17 @@ jobs:
         run: go get .
       - name: Test with Go
         run: go test
+      - name: Coveralls Parallel
+        uses: coverallsapp/github-action@v2
+        with:
+          flag-name: Go-${{ matrix.go-version }}
+          parallel: true
+
+  finish:
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Coveralls Finished
+        uses: coverallsapp/github-action@v2
+        with:
+          parallel-finished: true
