--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,10 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
 
 name: Go
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   test:
